Refactored and beautiful(mostly). Utilizing ArrayList to handle full file path